# validator

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
migrations/2022-07-17-133313_create_tracked_data/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
