[package]
name = "xml-validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.23", features = [ "serialize" ] }
actix-web = "4"
diesel = { version = " 2.0.0-rc.0", features = ["postgres", "numeric", "r2d2"] }
diesel_migrations = "1.4"
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.9.0"